some more windows styling

--- a/index.html
+++ b/index.html
@@ -16,13 +16,21 @@
         <nav>
             <ul>
                 <i class="far fa-moon"></i>
-                <li><a href="">File |</a></li>
+                <li><a href="">Home |</a></li>
                 <li><a href="">View |</a></li>
                 <li><a href="">Edit |</a></li>
                 <li><a href="">Help</a></li>
             </ul>
         </nav>
     </header>
+    <div class="desktop">
+        <img src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png"
+        alt="pink folder">
+        <h4>cat pics</h4>
+    </div>
+    <div class="containerbar">
+        <h3>Home.exe</h3>
+    </div>
     <div class="wrapperone">
         <h1 class="About">Hi, my name is KCasie. 
         <br>
