edited about me section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h3>Home.exe</h3>
     </div>
     <div class="wrapperone">
-        <h1 class="About">Hi, my name is KCasie. 
+        <h1 class="About">Hi, I'm KCasie. 
         <br>
         The purrfect kind of Web Developer you need.
         </h1>
