cat folder is now clickable with a link

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             </ul>
         </nav>
     </header>
-    <div class="desktop">
+    <div><a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
         <img src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png"
         alt="pink folder">
         <h4>cat pics</h4>
+        </a>
     </div>
     <div class="containerbar">
         <h3>Home.exe</h3>
