--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <title>KCasie | Developer</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <title>KCasie | Developer</title>
 </head>
 <body>
     <header>
@@ -18,28 +18,31 @@
                 <i class="far fa-moon"></i>
                 <li><a href="">Home |</a></li>
                 <li><a href="">View |</a></li>
-                <li><a href="">Edit |</a></li>
+                <li><a href="projects.html">Edit |</a></li>
                 <li><a href="">Help</a></li>
             </ul>
         </nav>
     </header>
-    <div><a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
+    <div id="websection"><a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
         <img class="pinkfolder" src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png"
         alt="pink folder">
         <h4 class="catpics">cat pics</h4>
         </a>
     </div>
-    <div class="containerbar">
-        <h3>Home.exe</h3>
-    </div>
-    <div class="wrapperone">
-        <h1 class="About">Hi, I'm KCasie. 
-        <br>
-        The purrfect kind of Web Developer you need.
-        </h1>
-        <br>
-        <button class="button-30" role="button">Contact Me Meow</button>
-        <br>
-    </div>
+    <span id="window">
+        <div class="containerbar">
+            <h3>Home.exe</h3>
+        </div>
+        <div class="wrapperone">
+            <h1 class="About">Hi, I'm KCasie. 
+            <br>
+            The purrfect kind of Web Developer you need.
+            </h1>
+            <br>
+            <button class="button-30" role="button">Contact Me Meow</button>
+            <br>
+        </div>
+    </span>
+    <script src="index.js"></script>
 </body>
 </html>
