--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             <br>
         </div>
     </span>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
