--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             <ul>
                 <i class="far fa-moon"></i>
                 <li><a href="index.html">Home |</a></li>
-                <li><a href="">View |</a></li>
+                <li><a href="view.html">View |</a></li>
                 <li><a href="projects.html">Edit |</a></li>
                 <li><a href="">Help</a></li>
             </ul>
