changed some tags to semantic

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             </ul>
         </nav>
     </header>
-    <div id="websection"><a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
+    <aside id="websection"><a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
         <img class="pinkfolder" src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png"
         alt="pink folder">
         <h4 class="catpics">cat pics</h4>
         </a>
-    </div>
-    <span id="window">
+    </aside>
+    <div id="window">
         <div class="containerbar">
             <h3>Home.exe</h3>
         </div>
@@ -42,7 +42,7 @@
             <button class="button-30" role="button">Contact Me Meow</button>
             <br>
         </div>
-    </span>
+    </div>
     <!-- <script src="index.js"></script> -->
 </body>
 </html>
