--- a/projects.html
+++ b/projects.html
@@ -32,24 +32,52 @@
             <h4 class="catpics">cat pics</h4>
         </a>
     </div>
-    <span id="window">
+    <section id="window">
         <div class="containerbar">
             <h3>Projects.exe</h3>
         </div>
-        <div class="wrapperone">
-            <img class="fleximg" src="https://s3-alpha.figma.com/hub/file/948140848/1f4d8ea7-e9d9-48b7-b70c-819482fb10fb-cover.png" alt="">
-            <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
-            <img class="fleximg" src="https://s3-alpha.figma.com/hub/file/948140848/1f4d8ea7-e9d9-48b7-b70c-819482fb10fb-cover.png" alt="">
-            <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-            esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
-            <img class="fleximg" src="https://s3-alpha.figma.com/hub/file/948140848/1f4d8ea7-e9d9-48b7-b70c-819482fb10fb-cover.png" alt="">
-            <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-            esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
-            <img class="fleximg" src="https://s3-alpha.figma.com/hub/file/948140848/1f4d8ea7-e9d9-48b7-b70c-819482fb10fb-cover.png" alt="">
-            <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-            esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+        <div class="wrapper">
+            <section>
+                <div class="one">
+                    <img class="fleximg" src="assets/kcasie.github.io_level-ground_.png" alt="#">
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <div>
+                        <a href="#" class="button-30">Demo</a>
+                        <a href="#" class="button-30">Github</a>
+                    </div>
+                </div>
+                <div class="two">
+                    <img class="fleximg" src="assets/kcasie.github.io_source-wireframe_.png" alt="#">
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <div>
+                        <a href="#" class="button-30">Demo</a>
+                        <a href="#" class="button-30">Github</a>
+                    </div>
+                </div>
+            </section>
+            <section>
+                <div class="three">
+                    <img class="fleximg" src="assets/kcasie.github.io_coffee-restaurant_.png" alt="#">
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <div>
+                        <a href="#" class="button-30">Demo</a>
+                        <a href="#" class="button-30">Github</a>
+                    </div>
+                </div>
+                <div class="four">
+                    <img class="fleximg" src="assets/kcasie.github.io_hair-salon_.png" alt="#">
+                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <div>
+                        <a href="#" class="button-30">Demo</a>
+                        <a href="#" class="button-30">Github</a>
+                    </div>
+                </div>
+            </section>
         </div>
-    </span>
+    </section>
 </body>
 
 </html>
