--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- css files -->
     <link rel="stylesheet" href="assets/css/index.css">
-    <!-- <link rel="stylesheet" href="assets/css/projects.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/view.css"> -->
     <title>KCasie | Developer</title>
 </head>
 <body>
@@ -22,7 +20,7 @@
                 <li class="home">Home |</li>
                 <li class="view">View |</li>
                 <li class="edit">Edit |</li>
-                <li><a href="">Help</a></li>
+                <li>Help</li>
             </ul>
         </nav>
     </header>
@@ -32,20 +30,19 @@
             <h4 class="catpics">cat pics</h4>
         </a>
     </aside>
-    <div class="homeWindow">
+    <main class="homeWindow">
         <div class="containerbar">
             <h3 class="heading">Home.exe</h3>
         </div>
         <div class="homeWrapper">
-            <h1 class="About">Hi, I'm KCasie. 
-            <br>
-            The purrfect kind of Web Developer you need.
+            <h1>Hi, I'm KCasie. 
+                <p>
+                The purrfect kind of Web Developer you need.
+                </p>
             </h1>
-            <br>
             <button class="button-30" role="button">Contact Me Meow</button>
-            <br>
         </div>
-    </div>
+    </main>
     <!-- PROJECTS.EXE -->
     <section class="projects hidden">
         <div class="containerbar padded">
@@ -93,8 +90,6 @@
             </section>
         </div>
     </section>
-
-
 
 
     <script src="js/index.js"></script>
