added media queries & project links

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
         </nav>
     </header>
     <aside id="websection">
-        <a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
-            <img class="pinkfolder" src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png" alt="pink folder">
-            <h4 class="catpics">cat pics</h4>
-        </a>
+        <div>
+            <a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
+                <img class="pinkfolder" src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png" alt="pink folder">
+                <span>Pspsps. Want to see some</span>
+                <h4 class="catpics">cat pics</h4>
+            </a>
+        </div>
     </aside>
     <main class="homeWindow">
         <div class="containerbar">
@@ -40,7 +43,7 @@
                 The purrfect kind of Web Developer you need.
                 </p>
             </h1>
-            <button class="button-30" role="button">Contact Me Meow</button>
+            <button class="meow button-30" role="button">Contact Me Meow</button>
         </div>
     </main>
     <!-- PROJECTS.EXE -->
@@ -51,20 +54,20 @@
         <div class="projectWrapper scroller">
             <section>
                 <div class="one">
-                    <img class="fleximg" src="assets/images/kcasie.github.io_level-ground_.png" alt="#">
+                    <img class="fleximg" src="assets/images/kcasie.github.io_source-wireframe_.png" alt="#">
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
                     <div>
-                        <a href="#" class="button-30">Demo</a>
-                        <a href="#" class="button-30">Github</a>
+                        <a href="https://kcasie.github.io/source-wireframe/" target="_blank" class="button-30">Demo</a>
+                        <a href="https://github.com/KCasie/source-wireframe" target="_blank" class="button-30">Github</a>
                     </div>
                 </div>
                 <div class="two">
-                    <img class="fleximg" src="assets/images/kcasie.github.io_source-wireframe_.png" alt="#">
+                    <img class="fleximg" src="assets/images/kcasie.github.io_hair-salon_.png" alt="#">
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
                     esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
                     <div>
-                        <a href="#" class="button-30">Demo</a>
-                        <a href="#" class="button-30">Github</a>
+                        <a href="https://kcasie.github.io/hair-salon/" target="_blank" class="button-30">Demo</a>
+                        <a href="https://github.com/KCasie/hair-salon" target="_blank" class="button-30">Github</a>
                     </div>
                 </div>
             </section>
@@ -74,17 +77,17 @@
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
                     esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
                     <div>
-                        <a href="#" class="button-30">Demo</a>
-                        <a href="#" class="button-30">Github</a>
+                        <a href="https://kcasie.github.io/coffee-restaurant/" target="_blank" class="button-30">Demo</a>
+                        <a href="https://github.com/KCasie/coffee-restaurant" target="_blank" class="button-30">Github</a>
                     </div>
                 </div>
                 <div class="four">
-                    <img class="fleximg" src="assets/images/kcasie.github.io_hair-salon_.png" alt="#">
+                    <img class="fleximg" src="assets/images/kcasie.github.io_level-ground_.png" alt="#">
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
                     esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
                     <div>
-                        <a href="#" class="button-30">Demo</a>
-                        <a href="#" class="button-30">Github</a>
+                        <a href="https://kcasie.github.io/level-ground/" target="_blank" class="button-30">Demo</a>
+                        <a href="https://github.com/KCasie/level-ground" target="_blank" class="button-30">Github</a>
                     </div>
                 </div>
             </section>
