view page complete with some touchups

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div>
             <a class="desktop" href="https://kcasie.github.io/my-first-image-gallery/" target="_blank">
                 <img class="pinkfolder" src="https://64.media.tumblr.com/c4304470bdf5eb222434fb4c4fd50e8e/27b62ba9d1aa22f6-80/s500x750/7fc5d167281b2cc79c70f6644ebe207dd3d7c781.png" alt="pink folder">
-                <span>Pspsps. Want to see some</span>
+                <span class="mobile">Pspsps. Want to see some</span>
                 <h4 class="catpics">cat pics</h4>
             </a>
         </div>
@@ -39,13 +39,32 @@
         </div>
         <div class="homeWrapper">
             <h1>Hi, I'm KCasie. 
-                <p>
-                The purrfect kind of Web Developer you need.
-                </p>
+                <p class="description">The purrfect kind of Web Developer you need.</p>
             </h1>
             <button class="meow button-30" role="button">Contact Me Meow</button>
         </div>
     </main>
+    <!-- VIEW.EXE -->
+    <section class="viewSection hidden">
+        <div class="containerbar short">
+            <h3 class="heading">View.exe</h3>
+        </div>
+        <div class="viewWrapper">
+            <div class="shortBio">
+                <img src="https://i.imgur.com/Hkf0Lp1.jpg" alt="#">
+                <span class="about">- A coffee aficionado who loves playing all sorts of games and admiring different types of cats</span>
+            </div>
+            <p class="description">
+                Who remembers <span class="myspace">MySpace</span>? Without realizing it, that's where my journey started. I love tinkering with code for profile layouts. The same goes for website layouts! Growing up, I noticed a lot of problem-solving on my own. Well, that's not
+                true. Countless people shared their solutions on the internet. They are the reason why I'm here as a developer.
+                
+                <span class="lineBreak">I am a perfectionist; I would try my hardest to make a website pixel-perfect. I am also willing to adapt to new
+                frameworks, languages, and technologies as necessary.</span>
+                
+                Technology opened up all kinds of possibilities for me. Today, it helps me in many more ways, and I want to help do the same for others. Let's work together!
+            </p>
+        </div>
+    </section>
     <!-- PROJECTS.EXE -->
     <section class="projects hidden">
         <div class="containerbar padded">
@@ -54,8 +73,9 @@
         <div class="projectWrapper scroller">
             <section>
                 <div class="one">
+                    <span>Scroll down for more!</span>
                     <img class="fleximg" src="assets/images/kcasie.github.io_source-wireframe_.png" alt="#">
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</p>
                     <div>
                         <a href="https://kcasie.github.io/source-wireframe/" target="_blank" class="button-30">Demo</a>
                         <a href="https://github.com/KCasie/source-wireframe" target="_blank" class="button-30">Github</a>
@@ -63,8 +83,8 @@
                 </div>
                 <div class="two">
                     <img class="fleximg" src="assets/images/kcasie.github.io_hair-salon_.png" alt="#">
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</p>
                     <div>
                         <a href="https://kcasie.github.io/hair-salon/" target="_blank" class="button-30">Demo</a>
                         <a href="https://github.com/KCasie/hair-salon" target="_blank" class="button-30">Github</a>
@@ -74,8 +94,8 @@
             <section>
                 <div class="three">
                     <img class="fleximg" src="assets/images/kcasie.github.io_coffee-restaurant_.png" alt="#">
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</p>
                     <div>
                         <a href="https://kcasie.github.io/coffee-restaurant/" target="_blank" class="button-30">Demo</a>
                         <a href="https://github.com/KCasie/coffee-restaurant" target="_blank" class="button-30">Github</a>
@@ -83,8 +103,8 @@
                 </div>
                 <div class="four">
                     <img class="fleximg" src="assets/images/kcasie.github.io_level-ground_.png" alt="#">
-                    <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
-                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi quis fugit velit. Ex mollitia magnam minus rerum
+                    esse enim porro, beatae dignissimos, quas tenetur nemo voluptate eum quia hic! Magni.</p>
                     <div>
                         <a href="https://kcasie.github.io/level-ground/" target="_blank" class="button-30">Demo</a>
                         <a href="https://github.com/KCasie/level-ground" target="_blank" class="button-30">Github</a>
