--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
 </head>
 <body>
     <header>
+        <i class="fas fa-window-restore hidden"></i>
         <nav>
-            <ul>
+            <div class="navbar">
                 <i class="far fa-moon"></i>
-                <li class="home">Home |</li>
-                <li class="view">View |</li>
-                <li class="edit">Edit |</li>
-                <li class="help">Help</li>
-            </ul>
+                <ul class="navigation">
+                    <li class="home">Home |</li>
+                    <li class="view">View |</li>
+                    <li class="edit">Edit |</li>
+                    <li class="help">Help</li>
+                </ul>
+            </div>
             <ul class="local">
                 <li class="date"></li>
                 <li class="time"></li>
@@ -57,7 +60,7 @@
         </div>
         <div class="viewWrapper">
             <div class="shortBio">
-                <img src="https://i.imgur.com/Hkf0Lp1.jpg" alt="#">
+                <img src="assets/images/kcasie1.jpg" alt="#">
                 <span class="about">- A coffee aficionado who loves playing all sorts of games and admiring different types of cats</span>
             </div>
             <p class="description">
@@ -146,14 +149,14 @@
                 <a href="#" target="_blank"><i class="fa-solid fa-envelope"></i></a>
             </section>
             <form action="#" method="post" enctype="text/plain">
-                <span class="warning">Warning! Under construction</span>
+                <span class="warning">Warning! Not functional</span>
                 <label for="user">Name: </label>
                 <input id="user" type="text">
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email">
                 <label for="text">Message:</label>
                 <textarea name="text" id="text" cols="40" rows="10"></textarea>
-                <input type="submit" value="submit" class="button-30 smol">
+                <input type="submit" value="Let's get this bread!" class="button-30 smol">
             </form>
         </div>
     </section>
